# yanyun-agent

./: .gitignore  DISCIPLINE.md  README.md  bootstrap.sh  setup.sh  test-sse-chat.sh
backend/: .env.example  pyproject.toml
backend/scripts/: check-ddd-violations.sh
backend/src/application/dtos/: agent_dto.py  event_dto.py  llm_dto.py  ping_dto.py  session_dto.py  skill_dto.py  task_dto.py
backend/src/application/services/: agent_loop_runner.py  agent_workflow.py  event_mapper.py  prompt_builder.py  session_title_generator.py  skill_storage_service.py  stream_event.py  task_completion_service.py
backend/src/application/use_cases/: agent_use_cases.py  agent_workflow.py  create_llm_use_case.py  ping_use_case.py  plan_executor.py  send_message.py  session_management.py  skill_upload.py  stream_event.py  sub_agent_launcher.py
backend/src/domain/: exceptions.py
backend/src/domain/agent/: agent.py  agent_state.py
backend/src/domain/conversation/: message.py  session.py  session_message.py
backend/src/domain/entities/: agent.py  agent_state.py  base.py  conversation.py  event.py  event_types.py  llm.py  message.py  output_schema.py  plan.py  prompt_assembly_result.py  prompt_template.py  session.py  session_message.py  skill_def.py  task.py  tool_call.py  tool_def.py
backend/src/domain/events/: __init__.py  agent_events.py  base.py  session_events.py  task_events.py
backend/src/domain/interfaces/: agent_workflow.py  llm_error_handler.py  prompt_context_interface.py
backend/src/domain/llm/: llm.py
backend/src/domain/prompt/: prompt_template.py
backend/src/domain/repositories/: agent_repository.py  base.py  event_publisher.py  event_repository.py  session_message_repository.py  session_repository.py  skill_repository.py  specifications.py  task_repository.py  tool_registry.py  (+1 more)
backend/src/presentation/: app.py  dependencies.py
backend/src/skills/: __init__.py  skill_def.py  skill_md_parser.py  skill_repository.py
backend/src/subagent/: __init__.py  sub_agent_launcher.py  sub_agent_orchestrator.py
(+248 files in other folders)
