[project]
name = "ddd-backend"
version = "0.1.0"
description = "DDD Scaffold Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0,<0.115.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    # 工具依赖
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.11",
]
