[project]
name = "wordlight-backend"
version = "0.1.0"
description = "WordLite Agent Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0,<0.115.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    # 工具依赖
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.2.5",
    # 搜索工具
    "tavily-python>=0.3.0",
    "langchain-deepseek>=1.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.11",
]
